[gd_scene load_steps=4 format=3 uid="uid://b0s62dm42825l"]

[ext_resource type="Theme" uid="uid://c277i8863ij4c" path="res://new_theme.tres" id="1_flg3t"]
[ext_resource type="Script" path="res://scripts/join_popup.gd" id="2_0g8l0"]
[ext_resource type="Script" path="res://scripts/mouse_hover_audio_detector.gd" id="3_c5a8h"]

[node name="join_popup" type="PopupPanel"]
transparent_bg = true
title = "asda"
initial_position = 1
size = Vector2i(374, 169)
visible = true
transparent = true
theme = ExtResource("1_flg3t")
script = ExtResource("2_0g8l0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 48.0
offset_top = 22.0
offset_right = 326.0
offset_bottom = 147.0
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_flg3t")
theme_type_variation = &"HeaderLarge"
text = "Join Game"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="IPLineEdit" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(278, 0)
layout_mode = 2
placeholder_text = "IP Address"
max_length = 15
caret_blink = true

[node name="PortLineEdit" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
placeholder_text = "Port"
max_length = 6
caret_blink = true

[node name="JoinBtn" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("1_flg3t")
theme_type_variation = &"PopupButton"
text = "Join"
script = ExtResource("3_c5a8h")

[connection signal="pressed" from="VBoxContainer/VBoxContainer/JoinBtn" to="." method="_on_join_btn_pressed"]
